Верстка для десктопной версии

--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -4,11 +4,13 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  /* stylelint-disable-next-line */
   min-height: calc(100 * var(--vh, 1vh));
   overflow-x: hidden;
 
   &--no-scrollbar {
     height: 100vh;
+    /* stylelint-disable-next-line */
     height: calc(100 * var(--vh, 1vh));
 
     -ms-overflow-style: none;
