--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,9 @@
 //---------------------------------
 
 @import "blocks/header";
+@import "blocks/main";
+@import "blocks/intro";
+@import "blocks/details";
 
 
 // используйте это для отключения ховеров на тач устройствах
