--- a/source/sass/blocks/details.scss
+++ b/source/sass/blocks/details.scss
@@ -1,7 +1,43 @@
 .details {
+  @include viewport--md {
+    display: flex;
+    background: $color-neon-blue;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100vw;
+    padding-bottom: 185px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(-100%);
+    transition: 1s;
+
+    .details__text {
+      color: $color-default-white;
+    }
+
+    .details__icon,
+    .details__icon--dino-detail {
+      fill: $color-default-white;
+    }
+
+    .details__icon--dino-flag {
+      stroke: $color-default-black;
+    }
+  }
+
   &--opened {
     display: block;
     animation: frombottom 1.5s ease;
+  }
+}
+
+.details--blue-opened {
+  @include viewport--md {
+    transform: translateX(0);
+    animation: blueleft 1s ease;
   }
 }
 
