--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -18,6 +18,12 @@
   }
 }
 
+@mixin viewport--lg-only {
+  @media (min-width: $viewport--xl - 1) {
+    @content;
+  }
+}
+
 @mixin viewport--md {
   @media (max-width: $viewport--lg - 1) {
     @content;
@@ -29,29 +35,3 @@
     @content;
   }
 }
-
-// Mobile first
-
-/* @mixin viewport--md {
-  @media (min-width: $viewport--md) {
-    @content;
-  }
-}
-
-@mixin viewport--lg {
-  @media (min-width: $viewport--lg) {
-    @content;
-  }
-}
-
-@mixin viewport--xl {
-  @media (min-width: $viewport--xl) {
-    @content;
-  }
-}
-
-@mixin viewport--xxl {
-  @media (min-width: $viewport--xxl) {
-    @content;
-  }
-} */
