--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -21,51 +21,17 @@
   margin-right: 10px;
 
   @include viewport--md {
+    margin-right: 0;
     padding-top: 0;
   }
 
-  &--opened {
-    display: block;
-    animation: fromleft 1.5s ease;
-  }
-}
-
-@keyframes fromleft {
-  0% {
-    transform: translateX(-100%);
-    opacity: 0;
+  @include viewport--sm {
+    font-size: 48px;
+    line-height: 48px;
+    max-width: 450px;
   }
 
-  40% {
-    transform: translateX(30px);
-  }
-
-  70% {
-    transform: translateX(-10px);
-  }
-
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-@keyframes frombottom {
-  0% {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-
-  40% {
-    transform: translateY(-30px);
-  }
-
-  70% {
-    transform: translateY(10px);
-  }
-
-  100% {
-    transform: translateY(0);
-    opacity: 1;
+  &--animated {
+    animation: fromleft $default-transition-settings;
   }
 }
