--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,18 +1,13 @@
 // Colors
-//---------------------------------
-// https://www.htmlcsscolor.com/hex/334482
 
 // Default
 
 $color-default-black:             #000000;
 $color-default-white:             #ffffff;
-$color-transparent:               rgba(255, 255, 255, 0);
 
 // Base
 
 $color-neon-blue:                 #2c39f2;
-$color-vivid-violet:              #9627a3;
-$color-torch-red:                 #ff1553;
 
 // Typography
 //---------------------------------
@@ -22,8 +17,8 @@ $font-family--neue-machina:         "Neue Machina", "Arial", sans-serif;
 // Animation
 //---------------------------------
 
-$default-transition-settings:       0.3s ease;
-$modal-transition-settings:         0.6s cubic-bezier(0.55, 0, 0.1, 1);
+$default-transition-settings:       1.5s ease;
+$icons-dino-transition:             2.5s ease infinite;
 
 // Viewports
 //---------------------------------
@@ -33,9 +28,3 @@ $viewport--md:                      768px;
 $viewport--lg:                      1024px;
 $viewport--xl:                      1440px;
 $viewport--xxl:                     1920px;
-
-// Retina
-//---------------------------------
-
-$retina-dpi:                        144dpi;
-$retina-dppx:                       1.5dppx;
