--- a/source/sass/blocks/details.scss
+++ b/source/sass/blocks/details.scss
@@ -1,4 +1,7 @@
 .details {
+  animation: frombottom $default-transition-settings;
+  display: none;
+
   @include viewport--md {
     padding: 20px;
     padding-bottom: 235px;
@@ -14,6 +17,7 @@
     justify-content: center;
     align-items: center;
     transform: translateX(-100%);
+    animation: none;
     transition: 1s;
   }
 
@@ -21,20 +25,16 @@
     min-height: 600px;
     padding-bottom: 150px;
   }
+}
 
-  &--animated {
-    animation: frombottom $default-transition-settings;
-  }
-
-  &--slide {
-    @include viewport--md {
-      transform: translateX(0);
-      animation: fromleft-slide $default-transition-settings;
-    }
+.details--slide {
+  @include viewport--md {
+    transform: translateX(0);
+    animation: fromleft-slide $default-transition-settings;
   }
 }
 
-.details__wrapper {
+.details__image {
   position: relative;
   min-height: 320px;
   min-width: 316px;
@@ -43,7 +43,8 @@
   align-items: flex-end;
 
   @include viewport--sm {
-    margin-left: 40px;
+    min-width: 245px;
+    margin-left: -20px;
   }
 }
 
@@ -103,19 +104,12 @@
 
   @include viewport--md {
     color: $color-default-white;
+    margin: 0 auto;
   }
 
   @include viewport--sm {
+    max-width: 310px;
     font-size: 24px;
-    line-height: 28px;
-  }
-}
-
-.details--nojs {
-  @include viewport--md {
-    position: static;
-    transform: translateX(0);
-    margin-top: 40px;
-    padding-bottom: 40px;
+    line-height: 34px;
   }
 }
