--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -69,7 +69,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
